Fix mobile dropdown gap and add new files

--- a/styles.css
+++ b/styles.css
@@ -519,7 +519,7 @@ body {
     .nav-menu {
         position: fixed;
         left: -100%;
-        top: 110px;
+        top: calc(40px + 10vh);
         flex-direction: column;
         background-color: white;
         width: 100%;
@@ -573,6 +573,10 @@ body {
         max-height: 70px;
     }
     
+    .nav-menu {
+        top: calc(40px + 7vh);
+    }
+    
     .logo {
         height: 4.5vh;
         min-height: 30px;
@@ -607,6 +611,10 @@ body {
         height: 6vh;
         min-height: 45px;
         max-height: 60px;
+    }
+    
+    .nav-menu {
+        top: calc(40px + 6vh);
     }
     
     .logo {
@@ -876,6 +884,10 @@ html {
         height: 8vh;
         min-height: 55px;
         max-height: 85px;
+    }
+    
+    .nav-menu {
+        top: calc(40px + 8vh);
     }
     
     .logo {
